--- a/maharashtra-truck.html
+++ b/maharashtra-truck.html
@@ -63,7 +63,7 @@
   </header>
 
   <!-- Hero -->
-  <div class="hero" title="Maharashtra Truck hero"></div>
+  <img src="./M.png" alt="Profile illustration" class="hero-image" style="height:320px; width:auto; object-fit:contain;"><img src="./Profile_1.png" alt="Profile illustration" class="hero-image" style="height:320px; width:auto; object-fit:contain;">
 
   <main class="wrap">
     <!-- Intro -->
