--- a/dental-vr.html
+++ b/dental-vr.html
@@ -1,127 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>VR Dental Training Simulation — Project</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --bg:#f7f8fa;
-      --surface:#ffffff;
-      --muted:#6b7280;
-      --text:#111827;
-      --border:#e5e7eb;
-      --chip:#f1f5f9;
-      --brand:#2563eb;
-      --radius:12px;
-      --shadow: 0 2px 8px rgba(0,0,0,.06);
-    }
-    *{box-sizing:border-box}
-    html{scroll-behavior:smooth}
-    body{margin:0; font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial; color:var(--text); background:var(--bg); line-height:1.6}
-    img{max-width:100%; display:block}
-    a{color:var(--brand); text-decoration:none}
-    a:hover{text-decoration:underline}
-    .wrap{width:min(1100px, 92vw); margin:0 auto}
-    header.top{position:sticky; top:0; z-index:10; background:rgba(247,248,250,.75); backdrop-filter: blur(8px); border-bottom:1px solid var(--border)}
-    .top-inner{display:flex; align-items:center; justify-content:space-between; gap:12px; padding:10px 14px}
-    nav a{color:var(--text); padding:8px 10px; border-radius:8px}
-    nav a:hover{background:#eef2f7; text-decoration:none}
-
-    /* Cover hero */
-    .cover{
-      height:min(36vh, 360px);
-      background:#ddd url('Dental_Front.png') center/cover no-repeat; /* <- your image as background */
-    }
-
-    .titlerow{display:grid; grid-template-columns: 1fr 220px; gap:24px; margin-top: -36px; padding:18px; background:var(--surface); border:1px solid var(--border); border-radius:var(--radius); box-shadow:var(--shadow)}
-    h1{font-size:clamp(1.8rem,4.4vw,2.6rem); line-height:1.1; margin:0 0 6px}
-    .intro{color:#374151}
-    .portrait{ width:100%; aspect-ratio: 3/4; border-radius:14px; overflow:hidden; border:1px solid var(--border); background:#e5e7eb url('assets/portrait.jpg') center/cover no-repeat; }
-    @media (max-width:900px){ .titlerow{ grid-template-columns:1fr } }
-    section{padding:28px 0}
-    h2{font-size:1.4rem; margin:0 0 12px}
-
-    /* Cards (unused here but kept) */
-    .cards{display:grid; grid-template-columns:repeat(12,1fr); gap:16px}
-    .card{grid-column:span 4; background:var(--surface); border:1px solid var(--border); border-radius:16px; overflow:hidden; box-shadow:var(--shadow)}
-    .thumb{aspect-ratio:16/9; background:#e5e7eb url('assets/project-thumb.jpg') center/cover no-repeat}
-    .meta{padding:12px 14px}
-    .title{font-weight:700}
-    .tags{display:flex; gap:8px; flex-wrap:wrap; margin-top:8px}
-    .tag{background:var(--chip); color:#374151; padding:6px 10px; border-radius:999px; font-size:.85rem}
-    .actions{display:flex; gap:10px; margin-top:10px; flex-wrap:wrap}
-    .btn{padding:8px 12px; border-radius:10px; border:1px solid var(--border); background:#f8fafc; color:#111827; text-decoration:none}
-    .btn:hover{background:#eef2f7}
-
-    @media (max-width:1000px){ .card{grid-column:span 6} }
-    @media (max-width:680px){ .card{grid-column:span 12} }
-
-    /* Two column panels */
-    .two{display:grid; grid-template-columns:1fr 1fr; gap:16px}
-    @media (max-width:900px){ .two{grid-template-columns:1fr} }
-    .panel{background:var(--surface); border:1px solid var(--border); border-radius:16px; padding:14px; box-shadow:var(--shadow)}
-    .list{display:grid; gap:10px}
-    .row{display:flex; justify-content:space-between; gap:10px; align-items:center; border:1px solid var(--border); background:#fff; border-radius:12px; padding:10px 12px}
-    .row .place{font-weight:700}
-    .row .where{color:#6b7280}
-
-    .contact{background:var(--surface); border:1px solid var(--border); border-radius:16px; padding:16px; box-shadow:var(--shadow)}
-    footer{padding:28px 0; color:#6b7280}
-  </style>
+  <!-- Use shared dark theme stylesheet -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="top">
-    <div class="wrap top-inner">
-      <div class="crumbs"><a href="../index.html">← Back</a></div>
-      <div class="btns">
-        <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/q3jmrM6cjmI">Video</a>
+  <!-- Hero section without animated swirls -->
+  <header class="hero">
+    <nav class="navbar">
+      <div class="brand"><a href="creative.html">CreativePro</a></div>
+      <div><a href="creative.html">← Back</a></div>
+    </nav>
+    <div class="hero-content">
+      <h1 class="hero-title">VR Dental Training Simulation</h1>
+      <p class="hero-tagline">Interactive VR training using real patient dental scans and real‑time tool interactions.</p>
+      <div class="hero-cta">
+        <a class="btn" href="https://youtu.be/q3jmrM6cjmI" target="_blank" rel="noopener">Watch Video</a>
       </div>
     </div>
+    <!-- Hero image for Dental VR -->
   </header>
 
-  <!-- Hero cover uses Dental_Front.png -->
-  <div class="cover"></div>
-
-  <main class="wrap">
-    <div class="panel" style="margin-top:-30px">
-      <h1>VR Dental Training Simulation</h1>
-      <div class="tags"><span class="tag">Virtual Reality</span><span class="tag">Training</span><span class="tag">Unreal Engine</span></div>
-      <p>Interactive VR training using real patient dental scans. Key procedures are simulated with real-time tool interactions, detailed 3D assets, dynamic lighting and materials—creating a repeatable, safe environment for understanding techniques.</p>
-      <p><strong>Client:</strong> Incise Dental<br>
-         <strong>Software:</strong> Unreal Engine<br>
-         <strong>Type:</strong> Virtual Reality<br>
-         <strong>Goal:</strong> Enable immersive, hands-on dental training using real patient models in VR.
-      </p>
-    </div>
-
-    <section class="two">
+  <main>
+    <section class="section">
       <div class="panel">
-        <h2>My role</h2>
-        <p>Scan cleanup/retopo; tool interactions; scenario steps &amp; evaluation; lighting &amp; materials.</p>
-      </div>
-      <div class="panel">
-        <h2>Tools / Stack</h2>
-        <p>Unreal Engine, asset pipeline</p>
-        <h2 style="margin-top:10px">Context</h2>
-        <p>Freelance training product for patient-model based education.</p>
+        <p>
+          Interactive VR training using real patient dental scans. Key procedures are simulated with real‑time tool interactions, detailed 3D assets, dynamic lighting and materials—creating a repeatable, safe environment for understanding techniques.
+        </p>
+        <p>
+          <strong>Client:</strong> Incise Dental<br>
+          <strong>Software:</strong> Unreal Engine<br>
+          <strong>Type:</strong> Virtual Reality<br>
+          <strong>Goal:</strong> Enable immersive, hands‑on dental training using real patient models in VR.
+        </p>
       </div>
     </section>
 
-    <!-- Kept only the bullet-point Process -->
-    <section>
+    <section class="section" style="padding-top:0;">
+      <div class="two-col">
+        <div class="panel">
+          <h2>My Role</h2>
+          <p>Scan cleanup/retopo; tool interactions; scenario steps &amp; evaluation; lighting &amp; materials.</p>
+        </div>
+        <div class="panel">
+          <h2>Tools / Stack</h2>
+          <p>Unreal Engine, asset pipeline</p>
+          <h2 style="margin-top:20px;">Context</h2>
+          <p>Freelance training product for patient‑model based education.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
       <div class="panel">
         <h2>Process</h2>
         <ul>
-          <li>Convert CT/CBCT scans to clean meshes suitable for real-time use.</li>
-          <li>Assemble a UE scene with accurate scale, lighting, and materials.</li>
-          <li>Build dental tools/interactions in Blueprints with constraints for stable control.</li>
-          <li>Script procedure steps with checks, timers, and scoring to measure performance.</li>
-          <li>Iterate via user tests; optimize and produce a walkthrough video.</li>
+          <li>Convert CT/CBCT scans to clean meshes suitable for real‑time use.</li>
+          <li>Assemble a UE scene with accurate scale, lighting and materials.</li>
+          <li>Build dental tools and interactions in Blueprints with constraints for stable control.</li>
+          <li>Script procedure steps with checks, timers and scoring to measure performance.</li>
+          <li>Iterate via user tests; optimise and produce a walkthrough video.</li>
         </ul>
       </div>
     </section>
+
+    <footer class="section" style="text-align:center; color:var(--muted);">
+      &copy; <script>document.write(new Date().getFullYear());</script> CreativePro
+    </footer>
   </main>
 </body>
 </html>
