--- a/maharashtra-truck.html
+++ b/maharashtra-truck.html
@@ -67,7 +67,16 @@
         </ul>
       </div>
     </section>
-
+<!-- Workflow image with network nodes -->
+    <section class="section">
+      <div class="panel">
+        <h2>Workflow</h2>
+        <div style="display:flex; justify-content:center;">
+          <img src="./M-1.png" alt="Workflow" loading="lazy"
+               style="max-width:100%; height:auto; border-radius:12px; border:1px solid var(--border); box-shadow:var(--shadow);">
+        </div>
+      </div>
+    </section>
     <footer class="section" style="text-align:center; color:var(--muted);">
       &copy; <script>document.write(new Date().getFullYear());</script> CreativePro
     </footer>
