--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Hero section with animated swirls and call‑to‑action -->
   <header class="hero">
     <nav class="navbar">
-      <div class="brand">Jeevanantham</div>
+      <div class="brand">Jeevanantham Sankaran</div>
       <ul class="navlinks">
         <li><a href="#projects">Projects</a></li>
         <li><a href="#experience">Experience</a></li>
@@ -31,7 +31,7 @@
       </ul>
     </nav>
     <div class="hero-content">
-      <h1 class="hero-title">Creative Technologist & VR Specialist</h1>
+      <h1 class="hero-title">VR Specialist</h1>
       <p class="hero-tagline">Designing immersive experiences at the intersection of 
         simulation, interaction and storytelling.</p>
       <div class="hero-cta">
@@ -40,7 +40,7 @@
       </div>
     </div>
     <!-- The avatar sits at the centre of the hero and remains static while the swirls rotate -->
-    <img src="./Profile_1.png" alt="Profile illustration" class="hero-image" style="height:320px; width:auto; object-fit:contain; bottom:-60px;">
+     <img src="./Profile_1.png" alt="Profile illustration" class="hero-image" style="height:320px; width:auto; object-fit:contain; bottom:-60px;">
     <!-- Swirling lines created purely with CSS borders.  Their animations are defined in the stylesheet. -->
     <div class="swirl swirl1" aria-hidden="true"></div>
     <div class="swirl swirl2" aria-hidden="true"></div>
@@ -294,4 +294,9 @@
         // Show/hide panes
         panes.forEach(p => {
           p.style.display = (p.dataset.pane === selected) ? 'grid' : 'none';
-     
+        });
+      });
+    });
+  </script>
+</body>
+</html>
