--- a/asters.html
+++ b/asters.html
@@ -11,7 +11,7 @@
   <!-- Hero section without animated swirls -->
   <header class="hero">
     <nav class="navbar">
-      <div class="brand"><a href="creative.html">CreativePro</a></div>
+      <div class="brand"><a href="index.html">Home</a></div>
       <div><a href="creative.html">← Back</a></div>
     </nav>
     <div class="hero-content">
