--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </li>
             <li class="list-item">
               <div class="item-main">
-                <span class="place">Madras Minds</span>
+                <span class="place">Madras MindWorks</span>
                 <span class="where">Developer Intern — Chennai, India</span>
               </div>
               <span class="when">Feb&nbsp;2023</span>
