--- a/maharashtra-truck.html
+++ b/maharashtra-truck.html
@@ -12,7 +12,7 @@
   <header class="hero">
     <nav class="navbar">
       <div class="brand"><a href="index.html">Home</a></div>
-      <div><a href="creative.html">← Back</a></div>
+      <div><a href="index.html">← Back</a></div>
     </nav>
     <div class="hero-content">
       <h1 class="hero-title">Maharashtra Truck Simulation</h1>
@@ -33,7 +33,7 @@
           A detailed virtual simulation of the Maharashtra truck transportation model, focusing on realistic road environments, vehicle behaviour and operational logistics.
         </p>
         <p>
-          <strong>Client:</strong> Transport Authority of Maharashtra<br>
+          <strong>Client:</strong> Government of Maharashtra<br>
           <strong>Software:</strong> Unreal Engine<br>
           <strong>Type:</strong> Simulation<br>
           <strong>Goal:</strong> Create an interactive and visually accurate simulation for training and visualisation purposes.
