--- a/dental-vr.html
+++ b/dental-vr.html
@@ -12,7 +12,7 @@
   <header class="hero">
     <nav class="navbar">
     <div class="brand"><a href="index.html">Home</a></div>
-      <div><a href="creative.html">← Back</a></div>
+      <div><a href="index.html">← Back</a></div>
     </nav>
     <div class="hero-content">
       <h1 class="hero-title">VR Dental Training Simulation</h1>
