--- a/maharashtra-truck.html
+++ b/maharashtra-truck.html
@@ -18,8 +18,7 @@
       <h1 class="hero-title">Maharashtra Truck Simulation</h1>
       <p class="hero-tagline">A detailed virtual simulation of the Maharashtra truck transportation model.</p>
       <div class="hero-cta">
-        <a class="btn" href="https://youtu.be/vZf56XWqUsY" target="_blank" rel="noopener">Watch Video</a>
-        <a class="btn btn-secondary" href="#" target="_blank" rel="noopener">Report</a>
+        <a class="btn" href="https://youtu.be/7zgsyIyo7qQ" target="_blank" rel="noopener">Watch Video</a>
       </div>
     </div>
     <!-- Hero image for the truck project -->
