--- a/maharashtra-truck.html
+++ b/maharashtra-truck.html
@@ -32,7 +32,6 @@
           A detailed virtual simulation of the Maharashtra truck transportation model, focusing on realistic road environments, vehicle behaviour and operational logistics.
         </p>
         <p>
-          <strong>Client:</strong> Government of Maharashtra<br>
           <strong>Software:</strong> Unreal Engine<br>
           <strong>Type:</strong> Simulation<br>
           <strong>Goal:</strong> Create an interactive and visually accurate simulation for training and visualisation purposes.
@@ -44,7 +43,7 @@
       <div class="two-col">
         <div class="panel">
           <h2>My Role</h2>
-          <p>Modelled vehicle assets, implemented driving physics, developed environment and road network, and scripted interactive scenarios.</p>
+          <p>Implemented driving physics, creating the environment, and scripted interactive scenarios.</p>
         </div>
         <div class="panel">
           <h2>Tools / Stack</h2>
